--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,14 @@
+# Dependencies
 node_modules/
-node_modules
+
+# Environment variables
 .env
+.env.local
+.env.*.local
+
+# Build output
 dist/
+
+# Prisma
+# Note: prisma/migrations/ should be committed
+# Note: prisma/schema.prisma should be committed
